# rag-pulse

./: .gitignore  LICENSE  README.md  pulse.config.yaml  pulse.config.yaml.example  pyproject.toml
benchmark/: generate_corpus.py
benchmark/corpus/: api.json  docs.json  pricing.json
local_test/: .gitignore  README.md  ingest.py  pdf_generator.py
pulse_scan/: cli.py  config.py  models.py
pulse_scan/adapters/: base.py  chroma.py  fixture.py
pulse_scan/dashboard/: app.py  components.py  queries.py
pulse_scan/db/: schema.py
pulse_scan/stages/: stage05_calibrate.py  stage0_ingest.py  stage1_calibrate.py  stage1_dedup.py  stage2_cluster.py  stage2_dedup.py  stage3_cluster.py  stage3_triage.py  stage4_nli.py  stage4_triage.py  stage5_nli.py  stage5_staleness.py  stage6_detectors.py  stage6_report.py  stage7_staleness.py  stage8_report.py  stage9_detectors.py
tests/: conftest.py  test_benchmark_corpus.py  test_chroma_adapter.py  test_dashboard_queries.py  test_fixtures_corpus.py  test_stage0.py  test_stage05_calibrate.py  test_stage1_calibrate.py  test_stage1_dedup.py  test_stage2_cluster.py  test_stage2_dedup.py  test_stage2_text_dedup.py  test_stage3_cluster.py  test_stage3_triage.py  test_stage4_nli.py  test_stage4_triage.py  test_stage5_nli.py  test_stage5_staleness.py  test_stage6_detectors.py  test_stage6_report.py  test_stage7_staleness.py  test_stage8_report.py  test_stage9_detectors.py  test_stage9_text_dedup.py
