[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulse-scan"
version = "0.1.0"
description = "Read-only RAG corpus health scanner"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.10",
    "numpy>=1.26",
    "xxhash>=3.4",
    "pyyaml>=6.0",
    "typer>=0.12",
    "structlog>=24.0",
    "torch>=2.2",
    "hnswlib>=0.8.0",
    "umap-learn>=0.5",
    "hdbscan>=0.8",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "transformers>=4.35",
    "sentencepiece>=0.1.99",
    "datasketch>=1.6",
    "streamlit>=1.35",
    "pandas>=2.0",
    "altair>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
]
chroma = [
    "chromadb>=0.4",
]

[project.scripts]
pulse = "pulse_scan.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["pulse_scan"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
